Bug 112392 - SvxEditModulesDlg::CreateEntry(rtl::OUString&, unsigned short) leaks memory
Summary: SvxEditModulesDlg::CreateEntry(rtl::OUString&, unsigned short) leaks memory
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:6.0.0
Keywords:
: 112394 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-09-14 16:21 UTC by Telesto
Modified: 2017-09-16 08:20 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
BT & Few screenshots (781.12 KB, application/x-zip-compressed)
2017-09-14 16:21 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2017-09-14 16:21:06 UTC
Description:
SvxEditModulesDlg::CreateEntry(rtl::OUString&, unsigned short) leaks memory 

Steps to Reproduce:
1. Start the Instruments
2. Choose Memory Leak profile tool
3. Select LibreOffice.app in instdir as target process
4. Click on the record button, LODev is started by the profiling tool
5. Wait for the StartCenter to load.
6. Go to LibreOffceDev -> Preferences 
7. Open LibreOffceDev ->Writing Aids
8. Writing add -> Edit
9. Close dialog
10. Close preference dialog
11. Stop recording.
12. Analyse the profile trace.

Actual Results:  
Memory leak in SvxEditModulesDlg::CreateEntry(rtl::OUString&, unsigned short)

Expected Results:
Shouldn't leak


Reproducible: Always

User Profile Reset: No

Additional Info:
Version: 6.0.0.0.alpha0+
Build ID: e970395c692a5c315914ddf5b43cf01e590345ff
CPU threads: 4; OS: Mac OS X 10.12.4; UI render: default; 
Locale: en-US (en_US.UTF-8); Calc: group



User-Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Telesto 2017-09-14 16:21:58 UTC
Created attachment 136245 [details]
BT & Few screenshots
Comment 2 Julien Nabet 2017-09-14 20:20:54 UTC
I submitted a patch for review, see https://gerrit.libreoffice.org/#/c/42307/
Comment 3 Julien Nabet 2017-09-14 21:20:29 UTC
*** Bug 112394 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2017-09-15 03:10:41 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e89700f02c7aa521c9e52468f076b64f1b30fcac

tdf#112392: avoid leak in SvxEditModulesDlg (cui)

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2017-09-15 05:09:41 UTC
Waiting for your feedback before cherry-picking the patch on 5.4
Comment 6 Telesto 2017-09-16 07:55:31 UTC
No repro with:
Version: 6.0.0.0.alpha0+
Build ID: e038dfdf05096edc0e9c38c9a686b5d23ba39352
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2017-09-14_23:35:41
Locale: nl-NL (nl_NL.UTF-8); Calc: group