tdf#112392: avoid leak in SvxEditModulesDlg (cui)

by using unique_ptr

Change-Id: I07d71a6aa1fe1eef40280588e842b1a884eb499e
Reviewed-on: https://gerrit.libreoffice.org/42307
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>